assets/sass/dropdown.scss
@keyframes dropdown-open-below {
  from {
    opacity: 0;
    transform: translateY(-0.4rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes dropdown-open-above {
  from {
    opacity: 0;
    transform: translateY(0.4rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.o-dropdown {
  position: relative;

  &__button {
    border: 0;
    background-color: transparent;
    color: var(--color-body);
    display: flex;
    font-weight: 500;
    padding: 1rem;
    gap: 0.5rem;
    align-items: center;
    position: relative;

    &:hover,
    &:focus {
      color: var(--link-hovered);
      transition: color 0.3s ease;

      & > :not(.material-symbols-rounded) {
        text-decoration: underline;
      }
    }
  }

  &__button[aria-expanded="true"] + &__menu {
    display: grid;
  }

  &__button[aria-expanded="true"] &__icon {
    transform: rotate(180deg);
  }

  &__item {
    width: 100%;
    display: inline-flex;

    &[aria-selected="true"] {
      a,
      button {
        color: var(--link-default);
        font-weight: 700;
      }
    }

    a,
    button {
      width: 100%;
      display: inline-flex;
      gap: 0.4em;
      text-decoration: none;
      font-weight: 400;
      white-space: nowrap;
      border-radius: var(--border-radius-m);
      padding: 0.8rem 1rem;
      align-items: center;
      color: var(--color-body);
      font-size: 1.8rem;
      transition:
        background 0.2s,
        color 0.2s;

      &:hover,
      &:focus {
        color: var(--link-hovered);
        background: rgba($link-hovered, 0.15);
        text-decoration: underline;
      }
    }

    &:first-of-type .a-button {
      border-radius: var(--border-radius-m) var(--border-radius-m) 0 0;
    }

    &:last-of-type .a-button {
      border-radius: 0 0 var(--border-radius-m) var(--border-radius-m);
    }
  }

  &__icon {
    font-size: 0.7rem;
    transition: transform 0.2s;
  }

  &__menu {
    z-index: 20;
    display: none;
    position: absolute;
    background: var(--bg-default);
    border-radius: var(--border-radius-m);
    list-style: none;
    width: min-content;
    margin: 0;
    padding-left: 0;
    box-shadow: var(--box-shadow);
    border: var(--border-visible);
    animation-duration: 0.2s;
    animation-timing-function: ease;

    &--above {
      bottom: 100%;
      top: auto;
      animation-name: dropdown-open-above;
    }

    &--below {
      top: 100%;
      bottom: auto;
      animation-name: dropdown-open-below;
    }

    &--right {
      right: 0;
    }
  }
}

